<resources>
    <string name="app_name">VietHunDictionary</string>
    <string name="nav_header_title" translatable="false">Vietnami-Magyar Szótár</string>
    <string name="nav_header_subtitle" translatable="false">duysp1994@gmail.com</string>
    <string name="action_search">Search</string>

    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_your_dictionary">Your dictionary</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search_bar">Type your word</string>
    <string name="communicate">Communicate</string>

    <string name="new_custom_word">Add new word</string>
    <string name="continue_text">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="word">Word</string>
    <string name="meaning">Meaning</string>
    <string name="delete_custom_word">Are you sure you want to delete?</string>
    <string name="item_removed_message">The word has been deleted!</string>
    <string name="item_insert_message">The word has been inserted successfully!</string>
    <string name="item_insert_exist_message">Insert failed! The word has existed!</string>
    <string name="item_insert_blank_message">Insert failed! The word or the meaning can not be blank!</string>
    <string name="item_edit_exist_message">Edit failed! The word has existed!</string>
    <string name="item_edit_blank_message">Edit failed! The word or the meaning can not be blank!</string>
    <string name="personal_word"> (personal word)</string>
    <string name="type">Type</string>
    <string name="edit_custom_word">Edit word</string>
    <string name="item_updated_message">The word has been updated!</string>
    <string name="blank_list">Add your own words here</string>
    <string name="english">English</string>
    <string name="hungarian">Hungarian</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="language">LANGUAGE</string>
    <string name="apply">Apply</string>
    <string name="quiz_question">What is the meaning of this word?</string>
    <string name="confirm">Confirm</string>
    <string-array name="type_items">
        <item name="noun">NOUN</item>
        <item name="verb">VERB</item>
        <item name="adverb">ADVERB</item>
        <item name="adjective">ADJECTIVE</item>
        <item name="determiner">DETERMINER</item>
        <item name="pronoun">PRONOUN</item>
        <item name="conjunction">CONJUNCTION</item>
        <item name="preposition">PREPOSITION</item>
    </string-array>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong</string>
</resources>
