<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dictionary"
            android:icon="@drawable/ic_dictionary"
            android:title="@string/menu_dictionary" />
        <item
            android:id="@+id/nav_custom_dictionary"
            android:icon="@drawable/ic_custom_dictionary"
            android:title="@string/menu_your_dictionary" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_spellcheck"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

</menu>
