<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dictionary">

    <fragment
        android:id="@+id/nav_dictionary"
        android:name="com.duyvu.viethundictionary.ui.dictionary.DictionaryFragment"
        android:label="@string/menu_dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/nav_custom_dictionary"
        android:name="com.duyvu.viethundictionary.ui.custom_dicionary.CustomDictionaryFragment"
        android:label="@string/menu_your_dictionary"
        tools:layout="@layout/fragment_custom_dictionary" />

    <fragment
        android:id="@+id/nav_quiz"
        android:name="com.duyvu.viethundictionary.ui.quiz.QuizFragment"
        android:label="@string/menu_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.duyvu.viethundictionary.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>